--- a/style.css
+++ b/style.css
@@ -135,3 +135,16 @@ footer {
   display: flex;
   flex-wrap: wrap;
 }
+.logo {
+  height: 60px;
+  margin-right: 15px;
+  vertical-align: middle;
+}
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+header img {
+  margin-bottom: 10px;
+}
