--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ img {
 }
 
 .logo {
-  height: 40px; /* Tamaño reducido del logo */
+  height: 40px;
   margin-right: 15px;
 }
 
@@ -64,11 +64,10 @@ nav a:hover {
 .section h2 {
   font-size: 2em;
   margin-bottom: 20px;
-  color: #ff9900; /* Color base naranja */
-  background: linear-gradient(45deg, #ff9900, #e67e00, #f39c12); /* Gradiente metálico */
-  -webkit-background-clip: text; /* Aplica el gradiente solo al texto */
-  color: transparent; /* Hace el color base transparente */
-  text-shadow: 1px 1px 5px rgba(255, 255, 255, 0.7), 0 0 10px rgba(255, 165, 0, 0.7); /* Efecto de brillo metálico */
+  background: linear-gradient(45deg, #ff9900, #e67e00, #f39c12);
+  -webkit-background-clip: text;
+  color: transparent;
+  text-shadow: 1px 1px 5px rgba(255, 255, 255, 0.7), 0 0 10px rgba(255, 165, 0, 0.7);
 }
 
 .gallery .grid {
@@ -78,8 +77,8 @@ nav a:hover {
 }
 
 .gallery img {
-  max-width: 80%; /* Ajusta el tamaño máximo de las imágenes */
-  height: auto;    /* Mantiene la proporción de la imagen */
+  max-width: 80%;
+  height: auto;
   border-radius: 12px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
@@ -87,6 +86,15 @@ nav a:hover {
 .gallery img:hover {
   transform: scale(1.05);
   box-shadow: 0 0 20px #ff9900;
+}
+
+.foto-principal {
+  width: 60%;
+  max-width: 300px;
+  display: block;
+  margin: 0 auto 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(255, 153, 0, 0.4);
 }
 
 form {
