--- a/style.css
+++ b/style.css
@@ -70,31 +70,42 @@ nav a:hover {
   text-shadow: 1px 1px 5px rgba(255, 255, 255, 0.7), 0 0 10px rgba(255, 165, 0, 0.7);
 }
 
-.gallery .grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 20px;
-}
-
-.gallery img {
-  max-width: 80%;
-  height: auto;
-  border-radius: 12px;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.gallery img:hover {
-  transform: scale(1.05);
-  box-shadow: 0 0 20px #ff9900;
+.album {
+  margin-bottom: 50px;
 }
 
 .foto-principal {
   width: 60%;
-  max-width: 250px;
+  max-width: 300px;
   display: block;
   margin: 0 auto 20px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(255, 153, 0, 0.4);
+}
+
+.imagenes-ocultas {
+  display: none;
+  margin-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+  justify-content: center;
+}
+
+.imagenes-ocultas.visible {
+  display: flex;
+}
+
+.imagenes-ocultas img {
+  width: 200px;
+  height: auto;
+  border-radius: 10px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.imagenes-ocultas img:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 15px #ff9900;
 }
 
 form {
