--- a/style.css
+++ b/style.css
@@ -1,25 +1,22 @@
 body {
   font-family: 'Segoe UI', sans-serif;
   margin: 0;
-  background-color: #0d0d0d;
-  background-image: url('textura-suave.png');
-  background-repeat: repeat;
-  background-size: cover;
   color: #f5f5f5;
   scroll-behavior: smooth;
-  position: relative; 
+  position: relative;
+  min-height: 100vh;
+  overflow-x: hidden;
+  background-color: black;
+  background-image: 
+    linear-gradient(to right, #4f4f4f2e 1px, transparent 1px),
+    linear-gradient(to bottom, #8080800a 1px, transparent 1px),
+    radial-gradient(circle 400px at 50% 300px, #fbfbfb36, #000);
+  background-size: 14px 24px, 14px 24px, cover;
+  background-repeat: no-repeat;
 }
 
 body::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: inherit;
-  opacity: 0.2; 
-  z-index: -1; 
+  content: none;
 }
 
 img {
@@ -77,6 +74,7 @@ nav a:hover {
   padding: 60px 20px;
   max-width: 1000px;
   margin: auto;
+  background-color: transparent;
 }
 
 .section h2 {
@@ -94,7 +92,7 @@ nav a:hover {
 
 .fotos-principales {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   flex-wrap: wrap;
   gap: 5px;
   margin: 40px auto;
@@ -119,12 +117,11 @@ form {
   gap: 15px;
 }
 
-input,
-textarea {
+input, textarea {
   padding: 10px;
   border: none;
   border-radius: 8px;
-  background-color: #1c1c1c;
+  background-color: #9a9a9a;
   color: #fff;
 }
 
@@ -198,40 +195,23 @@ footer {
   background-color: #e67e00;
 }
 
-.cookie-consent {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  background-color: rgba(0, 0, 0, 0.8);
-  color: white;
-  padding: 15px;
-  text-align: center;
-  font-size: 14px;
-  display: none; 
-  z-index: 9999; 
-}
-
-.cookie-consent p {
-  margin: 0;
-}
-
-.cookie-consent a {
-  color: #ff9900;
-  text-decoration: none;
-}
-
-.cookie-consent button {
+.mostrar-mas-btn {
+  margin: 20px 0 20px 350px;
+  display: inline-block;
+  padding: 12px 20px;
+  font-size: 1rem;
+  font-weight: bold;
   background-color: #ff9900;
-  color: black;
+  color: #000;
   border: none;
-  padding: 10px 20px;
-  border-radius: 5px;
+  border-radius: 8px;
   cursor: pointer;
-  font-size: 14px;
-  margin-top: 10px;
+  transition: background-color 0.3s ease;
 }
 
-.cookie-consent button:hover {
+.mostrar-mas-btn:hover {
   background-color: #e67e00;
+}
+.oculto {
+  display: none;
 }
