--- a/style.css
+++ b/style.css
@@ -195,11 +195,22 @@ footer {
   background-color: #e67e00;
 }
 
+.galeria-bloque {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+  margin-bottom: 40px;
+}
+
+.oculto {
+  display: none;
+}
+
 .mostrar-mas-btn {
-  margin: 20px 0 20px 350px;
   display: inline-block;
-  padding: 12px 20px;
-  font-size: 1rem;
+  padding: 5px 14px;
+  font-size: 0.8rem;
   font-weight: bold;
   background-color: #ff9900;
   color: #000;
@@ -212,6 +223,7 @@ footer {
 .mostrar-mas-btn:hover {
   background-color: #e67e00;
 }
-.oculto {
-  display: none;
+
+.mostrar-mas-btn.izquierda {
+  margin-left: 0;
 }
