--- a/style.css
+++ b/style.css
@@ -26,8 +26,8 @@ img {
 }
 
 .logo {
-  height: 200px;
-  margin-right: 120px;
+  height: 250px;
+  margin-right: -310px;
 }
 
 header {
@@ -39,23 +39,11 @@ header {
   flex-wrap: wrap;
   background: linear-gradient(to right, #000, #222);
   text-align: center;
-  padding: 40px 20px;
-}
-
-header h1 {
-  font-size: 0.5em;
-  margin: 0;
-  color: #fff;
-}
-
-header p {
-  margin: 10px 0 20px;
-  font-style: italic;
-  color: #ccc;
+  padding: 1px 20px;
 }
 
 nav {
-  margin-top: 100px;
+  margin-top: 250px;
 }
 
 nav a {
@@ -85,6 +73,13 @@ nav a:hover {
   color: transparent;
   text-shadow: 1px 1px 5px rgba(255, 255, 255, 0.7), 0 0 10px rgba(255, 165, 0, 0.7);
 }
+
+/* Texto del párrafo específicamente dentro de la sección #sobre-mi */
+#sobre-mi p {
+  font-size: 1.5rem; /* Cambiá este valor según prefieras */
+  line-height: 1.7;
+}
+
 
 .album {
   margin-bottom: 50px;
